--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "acorn": "^6.0.4",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
@@ -17,6 +18,16 @@
     "jsonwebtoken": "^8.4.0",
     "morgan": "~1.9.0",
     "mysql": "github:mysqljs/mysql",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "eslint-config-myconfig": "^0.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.11.1",
+    "eslint-config-google": "^0.11.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
